apps/shop/redis/k8s/overlays/non-prod/destrule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: shop-redis-dev
spec:
  host: shop-redis.shop-redis.svc.cluster.local
  subsets:
  - name: shop-redis-dev
    labels:
      app: shop-redis
      env: dev
    trafficPolicy:
      loadBalancer:
        simple: ROUND_ROBIN
  - name: shop-redis-dev-d1a
    labels:
      app: shop-redis
      env: dev
      deploy.cloud.google.com/target-id: d1a
    trafficPolicy:
      loadBalancer:
        simple: ROUND_ROBIN
